@@ -1,0 +1,9 @@
+{
+  "frameGrid" : {
+    "size" : [18, 18],
+    "dimensions" : [2, 1],
+    "names" : [
+      [ "unselected", "selected" ]
+    ]
+  }
+}
