@@ -9,12 +9,23 @@ afk = SettingsPluginClass:new(
 function afk:init()
   self:_loadConfig()
 
-  self.settingsTimer = root.getConfiguration("icc_afk_timer") or 0
+  self.settingsTimer = root.getConfiguration("scc_afk_timer") or 0
   widget.setText(self.layoutWidget .. ".lblAfkTimer", self.settingsTimer)
   widget.setData(self.layoutWidget .. ".lblAfkTimer", self.settingsTimer)
 
   widget.setData(self.layoutWidget .. ".afkTimerSpinner.up", widget.getData(self.layoutWidget .. ".afkTimerSpinner"))
   widget.setData(self.layoutWidget .. ".afkTimerSpinner.down", widget.getData(self.layoutWidget .. ".afkTimerSpinner"))
+
+  widget.setChecked(self.layoutWidget .. ".btnDisableAfkButton", root.getConfiguration("scc_afk_button_disabled"))
+
+  local effect = root.getConfiguration("scc_afk_effect") or "starchatafk"
+
+  for _, btn in ipairs(config.getParameter("gui")["lytPluginSettings"].children[self.name].children["rgAfkModes"].buttons) do
+    if btn.data.effect == effect then
+      widget.setSelectedOption(self.layoutWidget .. ".rgAfkModes", btn.id)
+      return
+    end
+  end
 end
 
 afk.afkTimerSpinner = {}
@@ -24,7 +35,7 @@ function afk.afkTimerSpinner.up(self)
   mins = math.min(mins + 1, 5)
   widget.setText(self.layoutWidget .. ".lblAfkTimer", mins)
   widget.setData(self.layoutWidget .. ".lblAfkTimer", mins)
-  root.setConfiguration("icc_afk_timer", tonumber(widget.getData(self.layoutWidget .. ".lblAfkTimer")) or 0)
+  root.setConfiguration("scc_afk_timer", tonumber(widget.getData(self.layoutWidget .. ".lblAfkTimer")) or 0)
   save()
 end
 
@@ -33,6 +44,17 @@ function afk.afkTimerSpinner.down(self)
   mins = math.max(mins - 1, 0)
   widget.setText(self.layoutWidget .. ".lblAfkTimer", mins)
   widget.setData(self.layoutWidget .. ".lblAfkTimer", mins)
-  root.setConfiguration("icc_afk_timer", tonumber(widget.getData(self.layoutWidget .. ".lblAfkTimer")) or 0)
+  root.setConfiguration("scc_afk_timer", tonumber(widget.getData(self.layoutWidget .. ".lblAfkTimer")) or 0)
+  save()
+end
+
+function afk:disableAFKButton()
+  root.setConfiguration("scc_afk_button_disabled", widget.getChecked(self.layoutWidget .. ".btnDisableAfkButton"))
+  save()
+end
+
+function afk:selectAfkMode()
+  local mode = widget.getSelectedData(self.layoutWidget .. ".rgAfkModes").effect
+  root.setConfiguration("scc_afk_effect", mode)
   save()
 end
