@@ -1,0 +1,7 @@
+{
+  "name" : "starchatafklines",
+
+  "scripts" : [
+    "starchatafklines.lua"
+  ]
+}
