@@ -1,10 +1,0 @@
-function init()
-  effect.setParentDirectives("?fade=00000000=0.8")
-end
-
-function update(dt)
-end
-
-function uninit()
-  effect.setParentDirectives("")
-end
